<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Language Selector Button/Toggle -->
    <!-- Displaying EN/FA directly might be tricky with standard menu items. -->
    <!-- Option 1: Use a custom layout action view (more complex). -->
    <!-- Option 2: Show an icon representing language. -->
    <!-- Option 3: Put language change inside the overflow menu. -->
    <!-- Let's go with Option 3 for simplicity, as requested in spec 5.1 -->

    <!-- Overflow Menu Items (triggered by the three dots icon) -->
    <!-- The three dots icon itself is not defined here, -->
    <!-- it's typically handled by the Toolbar automatically when items -->
    <!-- have showAsAction="never" or "ifRoom" and don't fit. -->
    <!-- However, to force the 3-dots and nest items, we wrap them. -->
    <!-- Update based on previous response: Use a wrapper item to explicitly show 3-dots -->

    <item
        android:id="@+id/action_overflow_menu_trigger"
        android:title=""
    android:icon="@drawable/ic_menu_options_vd"
    app:showAsAction="always"> <!-- Force the icon to be shown -->

    <!-- Actual menu items nested inside -->
    <menu>
        <item
            android:id="@+id/action_new"
            android:orderInCategory="10"
            android:title="@string/menu_new"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_open"
            android:orderInCategory="20"
            android:title="@string/menu_open"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_export"
            android:orderInCategory="30"
            android:title="@string/menu_export"
            android:enabled="false"
        app:showAsAction="never" />

        <item
            android:id="@+id/action_language_toggle"
            android:orderInCategory="40"
            android:title="Switch Language"
        app:showAsAction="never"/>

        <item
            android:id="@+id/action_about"
            android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    </menu>
</item>

    </menu>